<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="#F0E68C"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:text="please waiting"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal_get"
        app:layout_constraintTop_toBottomOf="@id/tv1" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cache_get"
        app:layout_constraintLeft_toRightOf="@id/btn1"
        app:layout_constraintTop_toBottomOf="@id/tv1" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_cache"
        app:layout_constraintLeft_toRightOf="@id/btn2"
        app:layout_constraintTop_toBottomOf="@id/tv1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="#F0E68C"
        android:fillViewport="true"
        android:padding="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn1">

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="..." />
    </ScrollView>
</android.support.constraint.ConstraintLayout>